--- a/faq.html
+++ b/faq.html
@@ -99,7 +99,7 @@
                                 <li><a class="dropdown-item" href="service.html">Our services</a></li>
                                 <li><a class="dropdown-item" href="single-service.html">Single services</a></li>
                                 <li><a class="dropdown-item" href="team.html">Our team</a></li>
-                                <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>
+                                <li><a class="dropdown-item" href="#">Team Single</a></li>
                                 <li><a class="dropdown-item" href="pricing.html">Pricing plans</a></li>
                                 <li><a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 <li><a class="dropdown-item" href="contact.html">Contact</a></li>
@@ -204,7 +204,7 @@
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        I'm a total beginner. Can I still follow along?
+                                        What services does your digital agency offer?
                                         <span class="icons">
                                             <i class="fa-solid fa-plus"></i>
                                             <i class="fa-solid fa-minus"></i>
@@ -214,9 +214,7 @@
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can tackle this program at your own availability. So whether you have an
-                                        hour per day spare or an hour per week, the training will be ready when you are.
-                                        As with anything, the more time you can dedicate
+                                        Our digital agency offers a range of services, including website design and development, search engine optimization (SEO), social media marketing, and email marketing. We also offer consulting services to help our clients develop and implement their digital strategy. If you're not sure what services you need, we can help you figure it out during our consultation process.
                                     </div>
                                 </div>
                             </div>
@@ -224,7 +222,7 @@
                                 <h2 class="accordion-header" id="headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Will you be updating the program?
+                                        How much do your services cost?
                                         <span class="icons">
                                             <i class="fa-solid fa-plus"></i>
                                             <i class="fa-solid fa-minus"></i>
@@ -234,9 +232,7 @@
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can tackle this program at your own availability. So whether you have an
-                                        hour per day spare or an hour per week, the training will be ready when you are.
-                                        As with anything, the more time you can dedicate
+                                        The cost of our services depends on the specific services you need and the scope of the project. We offer a variety of pricing options, from hourly rates to project-based pricing. We can discuss pricing during our consultation process and work with you to create a budget that fits your needs. We also offer payment plans and discounts for longer-term contracts.
                                     </div>
                                 </div>
                             </div>
@@ -245,7 +241,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        Can I get an invoice for my purchase? Hint: Yes.
+                                        What's your process for working with clients?
                                         <span class="icons">
                                             <i class="fa-solid fa-plus"></i>
                                             <i class="fa-solid fa-minus"></i>
@@ -255,9 +251,7 @@
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can tackle this program at your own availability. So whether you have an
-                                        hour per day spare or an hour per week, the training will be ready when you are.
-                                        As with anything, the more time you can dedicate
+                                        We believe that the key to a successful project is open communication and collaboration. Our process starts with an initial consultation, where we learn about your business and goals. Then, we'll develop a plan of action and set milestones for the project. We'll keep you updated throughout the process and make sure you're happy with the results. After the project is complete, we offer ongoing support and maintenance services to ensure your online presence stays up-to-date.
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +260,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseFour" aria-expanded="false"
                                         aria-controls="collapseFour">
-                                        What happens to my data if I cancel?
+                                        What are the benefits of working with a digital agency?
                                         <span class="icons">
                                             <i class="fa-solid fa-plus"></i>
                                             <i class="fa-solid fa-minus"></i>
@@ -276,9 +270,7 @@
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can tackle this program at your own availability. So whether you have an
-                                        hour per day spare or an hour per week, the training will be ready when you are.
-                                        As with anything, the more time you can dedicate
+                                        There are many benefits to working with a digital agency. First, we have the expertise and experience to get results. Second, we can save you time and money by handling all aspects of your online presence. Third, we can help you stay up-to-date with the latest trends and technologies. And finally, we can provide you with ongoing support and maintenance so you can focus on running your business.
                                     </div>
                                 </div>
                             </div>
@@ -287,7 +279,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseFive" aria-expanded="false"
                                         aria-controls="collapseFive">
-                                        What happens to my data if I cancel?
+                                        Can you help me create a digital marketing strategy?
                                         <span class="icons">
                                             <i class="fa-solid fa-plus"></i>
                                             <i class="fa-solid fa-minus"></i>
@@ -297,9 +289,7 @@
                                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can tackle this program at your own availability. So whether you have an
-                                        hour per day spare or an hour per week, the training will be ready when you are.
-                                        As with anything, the more time you can dedicate
+                                        Yes, we can definitely help you create a digital marketing strategy. In fact, that's one of our specialties! We'll start by learning about your business, your target audience, and your goals. Then, we'll develop a strategy that includes SEO, social media, email marketing, and other tactics to reach your target audience and achieve your goals. We'll also provide you with analytics and reporting so you can track your progress and make adjustments as needed.
                                     </div>
                                 </div>
                             </div>
