--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <li><a class="dropdown-item" href="service.html">Our services</a></li>
                                 <li><a class="dropdown-item" href="single-service.html">Single services</a></li>
                                 <li><a class="dropdown-item" href="team.html">Our team</a></li>
-                                <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>
+                                <li><a class="dropdown-item" href="#">Team Single</a></li>
                                 <li><a class="dropdown-item" href="pricing.html">Pricing plans</a></li>
                                 <li><a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 <li><a class="dropdown-item" href="contact.html">Contact</a></li>
@@ -210,7 +210,7 @@
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/icon/service_box/digital.png" alt="" style="width: 70px;">
-                            <h4>Digital Marketing Services</h4>
+                            <h4 style="margin-top: 8px;">Digital Marketing Services</h4>
                             <p>In today's digital age, a robust online presence is essential for business growth. Our digital marketing services are designed to catapult your brand into the digital spotlight and drive real results.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
@@ -245,7 +245,7 @@
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/icon/service_box/social.png" alt="" style="width: 70px;">
-                            <h4>Social Management Services</h4>
+                            <h4 style="margin-top: 15px;">Social Management Services</h4>
                             <p> Social media is the heartbeat of your brand's online presence. Our social management services are your passport to navigating the dynamic world of social media with finesse.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
@@ -454,24 +454,24 @@
             </div>
             <div class="min_team_area">
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
-                    <img src="assets/img/team/1.png" alt="">
-                    <h5><a href="team-single.html">Trian Dominguez</a></h5>
-                    <span>Visual designer</span>
+                    <img src="assets/img/eric.jpg" alt="" style="filter: grayscale(100%);">
+                    <h5><a href="#">Eric Iheanyichukwu</a></h5>
+                    <span>Founder / Marketing Officer</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
-                    <img src="assets/img/team/2.png" alt="">
-                    <h5><a href="team-single.html">Cohnor Delaney</a></h5>
-                    <span>Photographer</span>
+                    <img src="assets/img/aladdin.jpg" alt="" style="filter: grayscale(100%);">
+                    <h5><a href="#">Aladdin Altilib</a></h5>
+                    <span>Creative Director</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
-                    <img src="assets/img/team/3.png" alt="">
-                    <h5><a href="team-single.html">Enzon Hammond</a></h5>
-                    <span>Content writer</span>
+                    <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
+                    <h5><a href="#">David Ipese</a></h5>
+                    <span>PR & Content Strategist</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.9s">
-                    <img src="assets/img/team/1.png" alt="">
-                    <h5><a href="team-single.html">Trian Dominguez</a></h5>
-                    <span>Visual designer</span>
+                    <img src="assets/img/hudson.jpg" alt="" style="width: 316px; height: 320px; filter: grayscale(100%);">
+                    <h5><a href="#">Hudson Thangaraj</a></h5>
+                    <span>Digital Marketing Manager</span>
                 </div>
             </div>
         </div>
@@ -483,7 +483,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6">
                     <div class="section_img wow fadeInLeft" data-wow-delay="0.1s">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697021778/yk3requ4hqyalmfe9xvh.jpg" alt="">
+                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697021778/yk3requ4hqyalmfe9xvh.jpg" alt="" >
                     </div>
                 </div>
                 <div class="col-xl-6">
