--- a/service.html
+++ b/service.html
@@ -99,7 +99,7 @@
                                 <li><a class="dropdown-item" href="service.html">Our services</a></li>
                                 <li><a class="dropdown-item" href="single-service.html">Single services</a></li>
                                 <li><a class="dropdown-item" href="team.html">Our team</a></li>
-                                <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>
+                                <li><a class="dropdown-item" href="#">Team Single</a></li>
                                 <li><a class="dropdown-item" href="pricing.html">Pricing plans</a></li>
                                 <li><a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 <li><a class="dropdown-item" href="contact.html">Contact</a></li>
@@ -194,7 +194,7 @@
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/icon/service_box/digital.png" alt="" style="width: 70px;">
-                            <h4>Digital Marketing Services</h4>
+                            <h4 style="margin-top: 8px;">Digital Marketing Services</h4>
                             <p>In today's digital age, a robust online presence is essential for business growth. Our digital marketing services are designed to catapult your brand into the digital spotlight and drive real results.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
@@ -229,7 +229,7 @@
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/icon/service_box/social.png" alt="" style="width: 70px;">
-                            <h4>Social Management Services</h4>
+                            <h4 style="margin-top: 15px;">Social Management Services</h4>
                             <p> Social media is the heartbeat of your brand's online presence. Our social management services are your passport to navigating the dynamic world of social media with finesse.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
