--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
                                 <li><a class="dropdown-item" href="service.html">Our services</a></li>
                                 <li><a class="dropdown-item" href="single-service.html">Single services</a></li>
                                 <li><a class="dropdown-item" href="team.html">Our team</a></li>
-                                <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>
+                                <li><a class="dropdown-item" href="#">Team Single</a></li>
                                 <li><a class="dropdown-item" href="pricing.html">Pricing plans</a></li>
                                 <li><a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 <li><a class="dropdown-item" href="contact.html">Contact</a></li>
@@ -195,42 +195,42 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/team/1.png" alt="">
-                            <h5><a href="team-single.html">Trian Dominguez</a></h5>
+                            <h5><a href="#">Trian Dominguez</a></h5>
                             <span>Visual designer</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
                             <img src="assets/img/team/2.png" alt="">
-                            <h5><a href="team-single.html">Cohnor Delaney</a></h5>
+                            <h5><a href="#">Cohnor Delaney</a></h5>
                             <span>Photographer</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
                             <img src="assets/img/team/3.png" alt="">
-                            <h5><a href="team-single.html">Enzon Hammond</a></h5>
+                            <h5><a href="#">Enzon Hammond</a></h5>
                             <span>Content writer</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
                             <img src="assets/img/team/1.png" alt="">
-                            <h5><a href="team-single.html">Trian Dominguez</a></h5>
+                            <h5><a href="#">Trian Dominguez</a></h5>
                             <span>Visual designer</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
                             <img src="assets/img/team/2.png" alt="">
-                            <h5><a href="team-single.html">Cohnor Delaney</a></h5>
+                            <h5><a href="#">Cohnor Delaney</a></h5>
                             <span>Photographer</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
                             <img src="assets/img/team/3.png" alt="">
-                            <h5><a href="team-single.html">Enzon Hammond</a></h5>
+                            <h5><a href="#">Enzon Hammond</a></h5>
                             <span>Content writer</span>
                         </div>
                     </div>
