--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,7 @@
                                 <li><a class="dropdown-item" href="service.html">Our services</a></li>
                                 <li><a class="dropdown-item" href="single-service.html">Single services</a></li>
                                 <li><a class="dropdown-item" href="team.html">Our team</a></li>
-                                <li><a class="dropdown-item" href="team-single.html">Team Single</a></li>
+                                <li><a class="dropdown-item" href="#">Team Single</a></li>
                                 <li><a class="dropdown-item" href="pricing.html">Pricing plans</a></li>
                                 <li><a class="dropdown-item" href="faq.html">FAQs</a></li>
                                 <li><a class="dropdown-item" href="contact.html">Contact</a></li>
