--- a/team.html
+++ b/team.html
@@ -191,49 +191,36 @@
                 <h2 class="wow fadeInLeft" data-wow-delay="0.1s">Meet our team members</h2>
             </div>
             <div class="min_team_area_innar">
-                <div class="row">
-                    <div class="col-xl-4 col-md-6">
+                <div class="row" style="">
+                    <div class="col-xl-5 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
-                            <img src="assets/img/team/1.png" alt="">
-                            <h5><a href="#">Trian Dominguez</a></h5>
-                            <span>Visual designer</span>
+                            <img src="assets/img/eric.jpg" alt="" style="filter: grayscale(100%);">
+                                    <h5><a href="#">Eric Iheanyichukwu</a></h5>
+                                    <span>Founder / Marketing Officer</span>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6">
+                    <div class="col-xl-5 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
-                            <img src="assets/img/team/2.png" alt="">
-                            <h5><a href="#">Cohnor Delaney</a></h5>
-                            <span>Photographer</span>
+                            <img src="assets/img/aladdin.jpg" alt="" style="filter: grayscale(100%);">
+                            <h5><a href="#">Aladdin Altilib</a></h5>
+                            <span>Creative Director</span>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6">
+                    <div class="col-xl-5 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
-                            <img src="assets/img/team/3.png" alt="">
-                            <h5><a href="#">Enzon Hammond</a></h5>
-                            <span>Content writer</span>
+                            <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
+                            <h5><a href="#">David Ipese</a></h5>
+                            <span>PR & Content Strategist</span>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6">
+                    <div class="col-xl-5 col-md-6">
                         <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
-                            <img src="assets/img/team/1.png" alt="">
-                            <h5><a href="#">Trian Dominguez</a></h5>
-                            <span>Visual designer</span>
+                            <img src="assets/img/hudson.jpg" alt="" class="hudson" style=" height: 400px; filter: grayscale(100%);">
+                            <h5><a href="#">Hudson Thangaraj</a></h5>
+                            <span>Digital Marketing Manager</span>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6">
-                        <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
-                            <img src="assets/img/team/2.png" alt="">
-                            <h5><a href="#">Cohnor Delaney</a></h5>
-                            <span>Photographer</span>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6">
-                        <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
-                            <img src="assets/img/team/3.png" alt="">
-                            <h5><a href="#">Enzon Hammond</a></h5>
-                            <span>Content writer</span>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
