--- a/about-us.html
+++ b/about-us.html
@@ -365,30 +365,30 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.3s">
-                                    <img src="assets/img/team/3/1.png" alt="">
-                                    <h5><a href="#">Trian Dominguez</a></h5>
-                                    <span>Visual designer</span>
+                                    <img src="assets/img/eric.jpg" alt="" style="filter: grayscale(100%);">
+                                    <h5><a href="#">Eric Iheanyichukwu</a></h5>
+                                    <span>Founder / Marketing Officer</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-6" >
+                                <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s" >
+                                    <img src="assets/img/aladdin.jpg" alt="" style="filter: grayscale(100%);">
+                                    <h5><a href="#">Aladdin Altilib</a></h5>
+                                    <span style="padding-bottom: 60px;">Creative Director</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s">
-                                    <img src="assets/img/team/3/2.png" alt="">
-                                    <h5><a href="#">Cohnor Delaney</a></h5>
-                                    <span>Photographer</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s">
-                                    <img src="assets/img/team/3/3.png" alt="">
-                                    <h5><a href="#">Allison Everetti</a></h5>
-                                    <span>Web developer</span>
+                                    <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
+                                    <h5><a href="#">David Ipese</a></h5>
+                                    <span style="padding-bottom: 35px;">PR & Content Strategist</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.7s">
-                                    <img src="assets/img/team/3/4.png" alt="">
-                                    <h5><a href="#">Enzon Hammond</a></h5>
-                                    <span>Content writer</span>
+                                    <img src="assets/img/hudson.jpg" alt="" class="hudson2" style=" height: 250px; filter: grayscale(100%);">
+                                    <h5><a href="#">Hudson Thangaraj</a></h5>
+                                    <span>Digital Marketing Manager</span>
                                 </div>
                             </div>
                         </div>
