--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
     </section>
     
 
-    <section class="blog">
+   <!--  <section class="blog">
         <div class="container">
             <div class="section_title text-center wow fadeInLeft" data-wow-delay="0.1s">
                 <h2>Our news & articles</h2>
@@ -651,7 +651,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
    
 
     <footer class="footer" data-bg-color="#D9E0DD">
