--- a/index.html
+++ b/index.html
@@ -466,12 +466,12 @@
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
                     <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
                     <h5><a href="#">David Ipese</a></h5>
-                    <span>PR & Content Strategist</span>
+                    <span style="margin-top: 2px;">PR & Content Strategist</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.9s">
                     <img src="assets/img/hudson.jpg" alt="" style="width: 316px; height: 320px; filter: grayscale(100%);">
                     <h5><a href="#">Hudson Thangaraj</a></h5>
-                    <span>Digital Marketing Manager</span>
+                    <span >Digital Marketing Manager</span>
                 </div>
             </div>
         </div>
