--- a/about-us.html
+++ b/about-us.html
@@ -365,28 +365,28 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.3s">
-                                    <img src="assets/img/eric.jpg" alt="" style="filter: grayscale(100%);">
+                                    <img src="assets/img/eric381.jpg" alt="" style="filter: grayscale(100%);">
                                     <h5><a href="#">Eric Iheanyichukwu</a></h5>
                                     <span>Founder / Marketing Officer</span>
                                 </div>
                             </div>
                             <div class="col-lg-6" >
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s" >
-                                    <img src="assets/img/aladdin.jpg" alt="" style="filter: grayscale(100%);">
+                                    <img src="assets/img/aladdin381.jpg" alt="" style="filter: grayscale(100%);">
                                     <h5><a href="#">Aladdin Altilib</a></h5>
                                     <span style="padding-bottom: 60px;">Creative Director</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s">
-                                    <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
+                                    <img src="assets/img/david381.jpg" alt="" style="filter: grayscale(100%);">
                                     <h5><a href="#">David Ipese</a></h5>
                                     <span style="padding-bottom: 35px;">PR & Content Strategist</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.7s">
-                                    <img src="assets/img/hudson.jpg" alt="" class="hudson2" style=" height: 250px; filter: grayscale(100%);">
+                                    <img src="assets/img/hudson381.jpg" alt="" style=" filter: grayscale(100%);">
                                     <h5><a href="#">Hudson Thangaraj</a></h5>
                                     <span>Digital Marketing Manager</span>
                                 </div>
