--- a/index.html
+++ b/index.html
@@ -454,22 +454,22 @@
             </div>
             <div class="min_team_area">
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.3s">
-                    <img src="assets/img/eric.jpg" alt="" style="filter: grayscale(100%);">
+                    <img src="assets/img/eric416.jpg" alt="" style="filter: grayscale(100%);">
                     <h5><a href="#">Eric Iheanyichukwu</a></h5>
                     <span>Founder / Marketing Officer</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.5s">
-                    <img src="assets/img/aladdin.jpg" alt="" style="filter: grayscale(100%);">
+                    <img src="assets/img/aladdin416.jpg" alt="" style="filter: grayscale(100%);">
                     <h5><a href="#">Aladdin Altilib</a></h5>
                     <span>Creative Director</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.7s">
-                    <img src="assets/img/david.jpg" alt="" style="filter: grayscale(100%);">
+                    <img src="assets/img/david416.jpg" alt="" style="filter: grayscale(100%);">
                     <h5><a href="#">David Ipese</a></h5>
                     <span style="margin-top: 5px;">PR & Content Strategist</span>
                 </div>
                 <div class="single_team wow fadeInLeft" data-wow-delay="0.9s">
-                    <img src="assets/img/hudson.jpg" alt="" style="width: 316px; height: 320px; filter: grayscale(100%);">
+                    <img src="assets/img/hudson416.jpg" alt="" style="filter: grayscale(100%);">
                     <h5><a href="#">Hudson Thangaraj</a></h5>
                     <span >Digital Marketing Manager</span>
                 </div>
@@ -654,7 +654,7 @@
     </section> -->
    
 
-    <footer class="footer" data-bg-color="#D9E0DD">
+    <footer class="footer"  data-bg-color="#D9E0DD">
         <div class="container">
             <div class="main_footer">
                 <div class="row">
