--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     </section>
     
 
-    <section class="digital_agency">
+    <!-- <section class="digital_agency">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-6">
@@ -500,6 +500,41 @@
                                 We foster substantial growth.
                             </li>
                             <li class="wow fadeInLeft" data-wow-delay="1.1s"><i class="fa-solid fa-arrow-right"></i> We align our mission with yours.</li>
+                        </ul>
+                        <a href="contact.html" class="bg_btn_color wow fadeInLeft" data-wow-delay="1.3s">Get started</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+
+    <section class="digital_agency">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-6">
+                    <div class="section_img wow fadeInLeft" data-wow-delay="0.1s">
+                        <img src="assets/img/digital_agency.png" alt="">
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="content">
+                        <div class="section_title wow fadeInLeft" data-wow-delay="0.3s">
+                            <h2>We are more than <br>
+                                digital agency</h2>
+                        </div>
+                        <p class="wow fadeInLeft" data-wow-delay="0.5s">This is the main factor that sets us apart from
+                            our competition and allows us deliver a
+                            specialist business consultancy service. Our team applies its ranging experience to
+                            determining the strategies that</p>
+                        <ul class="agency_list list-unstyled">
+                            <li class="wow fadeInLeft" data-wow-delay="0.7s"><i class="fa-solid fa-arrow-right"></i>
+                                Creating a great digital experience</li>
+                            <li class="wow fadeInLeft" data-wow-delay="0.9s"><i class="fa-solid fa-arrow-right"></i>
+                                Focus on people, interactions and collaboration
+                            </li>
+                            <li class="wow fadeInLeft" data-wow-delay="1.1s"><i class="fa-solid fa-arrow-right"></i> A
+                                different way of thinking, both inside</li>
                         </ul>
                         <a href="contact.html" class="bg_btn_color wow fadeInLeft" data-wow-delay="1.3s">Get started</a>
                     </div>
