--- a/index.html
+++ b/index.html
@@ -478,12 +478,12 @@
     </section>
     
 
-    <!-- <section class="digital_agency">
+    <section class="digital_agency">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-6">
                     <div class="section_img wow fadeInLeft" data-wow-delay="0.1s">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697021778/yk3requ4hqyalmfe9xvh.jpg" alt="" >
+                        <img src="./assets/img/agency.jpg" alt="" >
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -506,7 +506,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <section class="digital_agency">
