--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                     </div>
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.7s">
-                            <img src="assets/img/icon/service_box/printing.png" alt="" style="width: 70px;">
-                            <h4>Printing Services</h4>
-                            <p>Tangible printed materials still hold immense power. Our printing services are here to bring your ideas to life, whether in the form of striking marketing collateral.  We utilize cutting-edge printing technology to ensure your materials are of the highest quality.</p>
+                            <img src="assets/img/icon/service_box/printing.png" alt="" style="width: 70px; margin-top: 5px;">
+                            <h4 style="margin-top: 20px;">Branding Services</h4>
+                            <p>Our Branding Services are here to bring your ideas to life, whether in the form of striking marketing collateral.  We utilize cutting-edge printing technology to ensure your materials are of the highest quality.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
@@ -667,6 +667,9 @@
                                 <a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
                                 <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
                                 <a href="https://bd.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://bd.linkedin.com/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://bd.linkedin.com/"><i class="fa-brands fa-youtube" ></i></a>
+                                
                             </div>
                         </div>
                     </div>
