--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                             <p >Together, we embark on a journey to create a brand that reflects your core values and aspirations. Our collaborative effort ensures that your brand identity aligns perfectly with your vision.</p>
                             <div class="social_icons">
                                 <a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://twitter.com/novdoxhq"><i class="fa-brands fa-twitter"></i></a>
                                 <a href="https://bd.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
                                 <a href="https://bd.linkedin.com/"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://bd.linkedin.com/"><i class="fa-brands fa-youtube" ></i></a>
