--- a/service.html
+++ b/service.html
@@ -259,7 +259,7 @@
         </div>
     </section>
     
-    <section class="digital_agency">
+    <!-- <section class="digital_agency">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-6">
@@ -288,7 +288,7 @@
             </div>
         </div>
     </section>
-
+ -->
 
 
 
