--- a/service.html
+++ b/service.html
@@ -168,7 +168,7 @@
     <div class="breadcrumb_area" data-bg-color="#FC7942">
         <div class="container">
             <div class="breadcrumb_content">
-                <h2>Our services</h2>
+                <h2>Our Services</h2>
                 <div class="breadcrumb_category">
                     <span><a href="index.html">Home</a></span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
