--- a/service.html
+++ b/service.html
@@ -247,8 +247,8 @@
                     <div class="col-xl-4">
                         <div class="single_service_box wow fadeInLeft" data-wow-delay="0.7s">
                             <img src="assets/img/icon/service_box/printing.png" alt="" style="width: 70px;">
-                            <h4>Branding Services</h4>
-                            <p>Tangible printed materials still hold immense power. Our Branding Services are here to bring your ideas to life, whether in the form of striking marketing collateral.  We utilize cutting-edge printing technology to ensure your materials are of the highest quality.</p>
+                            <h4 style="margin-top: 20px;">Branding Services</h4>
+                            <p>Our Branding Services are here to bring your ideas to life, whether in the form of striking marketing collateral.  We utilize cutting-edge printing technology to ensure your materials are of the highest quality.</p>
                             <a href="single-service.html" class="text_btn" >Learn more <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
