--- a/about-us.html
+++ b/about-us.html
@@ -189,7 +189,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="section_img wow fadeInLeft" data-wow-delay="0.1s">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697021779/klyfdryv8eey3x7p2if2.jpg" alt="">
+                        <img src="./assets/img/about.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
