--- a/about-us.html
+++ b/about-us.html
@@ -366,22 +366,22 @@
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.3s">
                                     <img src="assets/img/eric381.jpg" alt="" style="filter: grayscale(100%);">
-                                    <h5><a href="#">Eric Iheanyichukwu</a></h5>
+                                    <h5><a href="#">Eric <br> Iheanyichukwu</a></h5>
                                     <span>Founder / Marketing Officer</span>
                                 </div>
                             </div>
                             <div class="col-lg-6" >
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s" >
                                     <img src="assets/img/aladdin381.jpg" alt="" style="filter: grayscale(100%);">
-                                    <h5><a href="#">Aladdin Altilib</a></h5>
-                                    <span style="padding-bottom: 60px;">Creative Director</span>
+                                    <h5><a href="#">Aladdin <br> Altilib</a></h5>
+                                    <span style="padding-bottom: 25px;">Creative Director</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="single_team_two wow fadeInLeft" data-wow-delay="0.5s">
                                     <img src="assets/img/david381.jpg" alt="" style="filter: grayscale(100%);">
-                                    <h5><a href="#">David Ipese</a></h5>
-                                    <span style="padding-bottom: 35px;">PR & Content Strategist</span>
+                                    <h5><a href="#">David <br>Ipese</a></h5>
+                                    <span >PR & Content Strategist</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
