--- a/blog-single.html
+++ b/blog-single.html
@@ -76,7 +76,7 @@
                                 portfolio <i class="fas fa-chevron-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="portfolio-2-column.html">PORTFOLIO / 2 COLUMN</a>
+                                <li><a class="dropdown-item" href="portfolio.html">PORTFOLIO / 2 COLUMN</a>
                                 </li>
                                 <li><a class="dropdown-item" href="portfolio-3-column.html">PORTFOLIO / 3 COLUMN</a>
                                 </li>
@@ -410,7 +410,7 @@
                     <div class="row">
                         <div class="col-xl-6">
                             <ul class="footer_nav list-unstyled">
-                                <li><a href="portfolio-2-column.html">Portfolio</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><a href="team.html">our team</a></li>
                                 <li><a href="pricing.html">pricing plan</a></li>
                                 <li><a href="service.html">Services</a></li>
@@ -419,8 +419,8 @@
                         </div>
                         <div class="col-xl-6">
                             <ul class="footer_nav right list-unstyled">
-                                <li><a href="contact.html">Terms & conditions</a></li>
-                                <li><a href="contact.html">privacy policy</a></li>
+                                <li><a href="privacy.html">privacy policy</a></li>
+                                <li><a href="terms.html">Terms & conditions</a></li>
                             </ul>
                         </div>
                     </div>
