--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 Our Services <i class="fas fa-chevron-down"></i>
                             </a>
                             <!-- <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="portfolio-2-column.html">PORTFOLIO / 2 COLUMN</a>
+                                <li><a class="dropdown-item" href="portfolio.html">PORTFOLIO / 2 COLUMN</a>
                                 </li>
                                 <li><a class="dropdown-item" href="portfolio-3-column.html">PORTFOLIO / 3 COLUMN</a>
                                 </li>
@@ -436,7 +436,7 @@
                     </div>
                 </div>
             </div>
-            <a href="portfolio-2-column.html" class="bg_btn wow fadeInLeft" data-wow-delay="0.7s">View all projects</a>
+            <a href="portfolio.html" class="bg_btn wow fadeInLeft" data-wow-delay="0.7s">View all projects</a>
         </div>
         <div class="shape_img">
             <img src="assets/img/project/shape/1.png" alt="" class="one wow fadeInLeft" data-wow-delay="0.1s">
@@ -717,7 +717,7 @@
                     <div class="row">
                         <div class="col-xl-6" >
                             <ul class="footer_nav list-unstyled" >
-                                <li><a href="portfolio-2-column.html">Portfolio</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><a href="team.html">our team</a></li>
                                 
                                 <li><a href="service.html">Services</a></li>
@@ -726,8 +726,9 @@
                         </div>
                         <div class="col-xl-6">
                             <ul class="footer_nav right list-unstyled">
-                                <li><a href="contact.html">Terms & conditions</a></li>
-                                <li><a href="contact.html">privacy policy</a></li>
+                                <li><a href="privacy.html">privacy policy</a></li>
+                                <li><a href="terms.html">Terms & conditions</a></li>
+                               
                             </ul>
                         </div>
                     </div>
