--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="https://geniushubschool.com/">GeniusHub School Website</a></h4>
+                        <h4><a href="https://geniushubschool.com/">GeniusHub School - LMS</a></h4>
                         <a class="project_btn" href="https://geniushubschool.com/">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
@@ -415,7 +415,7 @@
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="https://oliviaempire.com/">Olivia Empire </a></h4>
+                        <h4><a href="https://oliviaempire.com/">Olivia Empire - BB Naija </a></h4>
                         <a class="project_btn" href="https://oliviaempire.com/">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
@@ -430,7 +430,7 @@
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="https://artnouveauevents.com/">Art Nouveau Event Centre Website</a></h4>
+                        <h4><a href="https://artnouveauevents.com/">Art Nouveau Event Centre - Owerri</a></h4>
                         <a class="project_btn" href="https://artnouveauevents.com/">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
